Fix broken supporting image class
Fix broken CSS causing unwanted space between image borders and the
images themselves.

--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -86,7 +86,7 @@ p {
 }
 
 .img-supporting {
-  object-fit: contain;
+  object-fit: cover;
   max-height: 433px;
   height: auto;
   width: 100%;
